# Snippets

./: .coveragerc  .dockerignore  .env.example  Dockerfile  db.sqlite3  demo_snippets.json  docker-compose.override.yml  docker-compose.yml  nginx.conf  pyproject.toml
MainApp/: admin.py  context_processors.py  forms.py  models.py  signals.py  test_factory.py  urls.py  views.py  views_api.py  views_cbv.py
MainApp/management/commands/: get_users.py
MainApp/templates/: add_snippet.html  base.html  edit_profile.html  edit_snippet.html  index.html  notifications.html  profile.html  search_results.html  set_new_pass.html  snippet_detail.html  snippets_by_tag.html  snippets_stats.html  user_snippets.html  view_snippets.html
MainApp/templates/api/: api_test.html
MainApp/templates/custom_auth/: account_activation.html  account_activation.txt  register.html  resend_email.html
MainApp/templates/includes/: navbar.html  notifications_list.html  search_form.html
MainApp/templatetags/: lang_tags.py  message_extras.py
Snippets/: asgi.py  settings.py  urls.py  wsgi.py
demo/: demo_js.js  test_events1.html  test_js.html
docker/: entrypoint.sh
fixtures/: snippets.json
mainapp/: context_processors.py  forms.py  models.py  urls.py  views.py
mainapp/templates/: add_snippet.html  base.html  edit_snippet.html  index.html  search_results.html  snippet_detail.html  user_snippets.html  view_snippets.html
mainapp/templates/custom_auth/: register.html
mainapp/templates/includes/: navbar.html  paginator.html  search_form.html
mainapp/templatetags/: lang_tags.py
static/: styles.css
static/css/: styles.css
static/js/: api_example.js  forms.js  likes.js  messages.js  notifications.js  utils.js
tests/: factories.py  test_factory.py  test_factory_fictures.py  test_forms.py  test_models.py  test_views.py
tests/selenium/: tests_UI.py
