[tool.poetry]
name = "snippets"
version = "0.1.0"
description = ""
authors = ["maxx <maxpetrikin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.3"
django-extensions = "^4.1"
django-crispy-forms = "^2.4"
crispy-bootstrap5 = "^2025.6"
ipython = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
