[tool.poetry]
name = "snippets"
version = "0.1.0"
description = ""
authors = ["maxx <maxpetrikin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.3"
django-extensions = "^4.1"
django-crispy-forms = "^2.4"
crispy-bootstrap5 = "^2025.6"
ipython = "^9.4.0"
pytest = "^8.4.1"
factory-boy = "^3.3.3"
pytest-cov = "^6.2.1"
pytest-django = "^4.11.1"
selenium = "^4.34.2"
webdriver-manager = "^4.0.2"
pillow = "^11.3.0"
django-debug-toolbar = "^6.0.0"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"
psycopg = {extras = ["binary"], version = "^3.2.9"}
python-dotenv = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"
pytest-cov = "^6.2.1"
coverage = "^7.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
